Fix capture region overlapping container

--- a/css/components/screen-recorder.css
+++ b/css/components/screen-recorder.css
@@ -246,6 +246,9 @@
   }
 
   .screenrec-video{
+    position:absolute;
+    inset:0;
+    display:block;
     width:100%;
     height:100%;
     object-fit:contain;
